# demeter

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  README.md  README_db_setup.md  README_upgrade_geos.md  README_wsl.md  docker-compose.yml  example.py  mypy.ini  postgis_faq.md  pull_request_template.md  pyproject.toml  readme.md  readme_db_setup.md  readme_wsl.md  schema.sql
.ci/: id_rsa.enc
.github/.workflows/: create_github_release.yml
.github/workflows/: build-docker.yml  build-test-ecr.yml  build-test.yml  ecr-workflow.yml  install_poetry.yml  install_project.yml  postgis.yml  pre-commit.yml  setup_database.yml  testing.yml
demeter/: __init__.py  _version.py  connections.py  constants.py  core.py  execution.py  execution_custom.py  function.py  function_custom.py  inputs.py  inputs_custom.py  local.py  now.py  temporary.py  transformation.py  type_lookups.py
demeter/cli/: __init__.py  _utils.py
demeter/core/: api.py  types.py
demeter/data/: __init__.py  _union_types.py  types.py  union_types.py
demeter/data/_core/: __init__.py  field_group.py  generated.py  geom.py  grouper.py  lookups.py  parcel_group.py  st_types.py  types.py  union_types.py
demeter/data/_local/: __init__.py  generated.py  lookups.py  (+2 more)
demeter/database/: __init__.py  api_protocols.py  details.py  generators.py  readme.md  type_lookups.py  types_protocols.py  util.py
demeter/datasource/: base.py  datasource.py  http.py  local.py  register.py  s3.py  s3_file.py  types.py  util.py
demeter/db/: __init__.py  _base_types.py  _generic_types.py  _initialize.py  _json_type.py  _lookup_types.py  _register.py  _union_types.py  base_types.py  generic_types.py  json_type.py  lookup_types.py  register.py  sql_helpers.py  type_to_sql.py  union_types.py
demeter/execution/: api.py  types.py
demeter/function/: api.py  types.py
demeter/grid/: __init__.py  _generated.py  _types.py  _union_types.py
demeter/inputs/: api.py  types.py
demeter/local/: api.py
demeter/task/: __init__.py  _register.py  _s3_connection.py  _union_types.py  types.py  union_types.py
demeter/tests/: _load_test_data.py  conftest.py  constants.py  test_demeter_setup.py  test_upsert_field_group.py  test_upsert_geom.py  test_upsert_grouper.py  test_weather.py
demeter/types/: __init__.py  core.py  execution.py  function.py  inputs.py  local.py
demeter/util/: cli.py  existing.py  register.py  setup.py  sql.py  teardown.py  wrapper_types.py
demeter/weather/: __init__.py  _grid_utils.py  _initialize.py  initialize_weather_schema.py  schema_weather.sql
demeter/weather_grid/: utils_wx_grid.py
demeter/work/: __init__.py  _existing.py  _generated.py  _lookups.py  _transformation.py  _union_types.py  existing.py  lookups.py  temporary.py  transformation.py  types.py  union_types.py
demeter_initialize/all/: __main__.py
demeter_initialize/users/: __main__.py  create_users.sql
initialize/: _utils.py
initialize/all/: __main__.py
initialize/users/: __main__.py  _create_users.py  _users.py  main.py
lib/: connections.py  datasource.py  function.py  generators.py  http.py  local.py  schema_api.py  types.py
mlops_db/: __init__.py
mlops_db/functions/: transformation.py
mlops_db/importing/: execute.py  get_fn.py  import_plan.py  imports.py  outputs.py  write_fn.py
mlops_db/importing_scripts/: geom_and_field.py  growers.py  imports.py  irrigation.py  migrate.py  migrate_help.py  review_harvest.py  review_quality.py  util.py
mlops_db/lib/: connections.py  datasource.py  flatten_xml.py  function.py  generators.py  http.py  http_util.py  ingest.py  local.py  schema_api.py  temporary.py  types.py
mlops_db/scripts/: example.py  execute.py  foo.py  get_field_data.py  imports.py  load_mlops.py  make_http.py  make_keys.py  make_s3.py  migrate.py  migrate_help.py  plan.py  server.py  simplified.py  upload_s3.py
scripts/: __init__.py  example.py  fetch.py  generate_diagram.py  generate_weather_grid.py  get_action_planting.sql  get_features.sql  get_field_data.py  get_weather_example.py  grid.py  init.py  initialize_demeter.py  initialize_weather_schema.py  insert_keys.py  load_mlops.py  make_http.py  meteo.py  run_daily_weather.py  sample.py  server.py  to_graphviz.py  transform.py  upload_s3.py
scripts/explore/: __main__.py  curses.py  data_option.py  fields.py  log.py  logging.py  main.py  summary.py  theme.py
scripts/grid/: __init__.py  __main__.py  example.py  main.py  meteo.py  search.py  spatial_utils.py  valuer.py
scripts/weather/: get_weather_example.py  initialize_weather_schema.py  run_daily_weather.py
test_data/: geospatial.json
(+256 files in other folders)
