[tool.poetry]
name = "demeter"
version = "1.0.47"
description = ""
authors = ["Joel Larson <JoelLarson@sentera.com>"]
packages = [
  {include = "demeter"},
  {include = "demeter/py.typed"},
]

[tool.poetry.dependencies]
python = "~3.10.4"
psycopg2 = "^2.9.3"
typing_extensions = "^4.0.1"
typing_inspect = "^0.8.0"
jsonschema = "^4.4.0"
geopandas = "^0.10.2"
boto3 = "^1.20.48"
requests = "^2.27.1"
scoping = "^0.1.2"
dictdiffer = "^0.9.0"
Rtree = "^1.0.0"
sphinx-autodoc-typehints = "^1.18.3"
piccolo-theme = "^0.11.1"
# Candidate
autoclasstoc = "^1.5.1"
Sphinx = "^4.0.0"
sphinx-toolbox = "^3.1.2"
sphinx-rtd-theme = "^1.0.0"
html-section = "^0.2.0"
domdf-sphinx-theme = "^22.1.2"
# TODO: Fix this once PR is merged
toctree-plus = {git = "https://github.com/sphinx-toolbox/toctree_plus.git", rev = "dependabot/pip/sphinx-gte-3.0.3-and-lt-5.2.0"}
autodocsumm = "^0.2.9"

[tool.poetry.dev-dependencies]
types-jsonschema = "^4.4.1"
types-psycopg2 = "^2.9.7"
types-requests = "^2.27.10"
types-urllib3 = "^1.26.9"
types-boto3 = "^1.0.1"
pandas-stubs = "^1.2.0"
mypy = "^0.950"
mypy-extensions = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
example = "demeter.scripts.example:main"

