[tool.poetry]
name = "demeter"
version = "1.2.4"
description = "The database schema and API that supports agronomic modeling and data science activities."
authors = ["Joel Larson <JoelLarson@sentera.com>"]
packages = [
  {include = "demeter"},
  {include = "demeter/py.typed"},
]

[tool.poetry.dependencies]
python = "~3.10.4"
boto3 = "^1.20.48"
dictdiffer = "^0.9.0"
geopandas = "^0.12.1"
joblib = "^1.2.0"
jsonschema = "^4.4.0"
pg-diagram = "^0.1.2"
psycopg2 = "^2.9.3"
python-dotenv = "^0.21.0"
requests = "^2.27.1"
Rtree = "^1.0.0"
shapely = "1.8.5.post1"
typing_extensions = "^4.0.1"
typing_inspect = "^0.8.0"
types-boto3 = "^1.0.1"
types-jsonschema = "^4.4.1"
types-psycopg2 = "^2.9.7"
types-requests = "^2.27.10"
types-urllib3 = "^1.26.9"
sqlalchemy_schemadisplay = {git = "https://github.com/fschulze/sqlalchemy_schemadisplay.git", branch = "master"}
SQLAlchemy = "^1.4.45"
GeoAlchemy2 = "^0.12.5"
sshtunnel = "^0.4.0"
meteomatics = "^2.9.0"
global-land-mask = "^1.0.0"
timezonefinder = "^6.1.9"
aws_utils = {git = "ssh://git@github.com/SenteraLLC/py-aws-utils.git", branch = "master"}
geo_utils = {git = "ssh://git@github.com/SenteraLLC/py-geo-utils.git", branch = "main"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
autodocsumm = "^0.2.9"
autoclasstoc = "^1.5.1"
graphviz = "^0.20.1"
html-section = "^0.2.0"
piccolo-theme = "^0.11.1"
pydot = "^1.4.2"
Sphinx = "^4.0.0"
domdf-sphinx-theme = "^22.1.2"
sphinx-autodoc-typehints = "^1.18.3"
sphinx-rtd-theme = "^1.0.0"
sphinx-toolbox = "^3.1.2"
toctree-plus = {git = "https://github.com/sphinx-toolbox/toctree_plus.git", rev = "dependabot/pip/sphinx-gte-3.0.3-and-lt-5.2.0"}

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"
sure = "^2.0"
flake8 = "^5.0.4"
black = {version = "^22.6", allow-prereleases = true}
ipywidgets = "^7.7"
ipykernel = "^6.15"
pyppeteer = "^1.0.2"
jupyterlab = "^3.4.3"
pyparsing = "^3.0.9"
types-jsonschema = "^4.4.1"
types-requests = "^2.28.11.5"
types-psycopg2 = "^2.9.21.2"
types-urllib3 = "^1.26.9"
types-boto3 = "^1.0.1"
pandas-stubs = "^1.2.0"
mypy = "^0.950"
mypy-extensions = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
example = "demeter.scripts.example:main"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["click"]
force_grid_wrap = 3